added diffrent index page elemets depending on the login state, and id the user has any projects, and changed the style of the login button in the nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             {% if user %}
             <a href="/logout"><img src="https://cdn-icons-png.flaticon.com/512/6522/6522516.png" alt="login"></a>
             {% else %}
-            <a href="/login"><button>Login</button></a>
+            <a href="/login"><button class="nav-login">Login</button></a>
             {% endif %}
         </div>
     </nav>
