--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -40,7 +40,7 @@ body{
 .Projects-list {
     padding: 10px 200px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     width: 100%;
     max-width: 100%;
@@ -90,4 +90,55 @@ body{
     -webkit-box-orient: vertical;
     white-space: normal; /* Ensure wrapping is allowed */
     color: white;
+}
+
+
+.not-loged-section, .no-projects-section{
+    position: relative;
+    height: calc(100VH - 100px);
+    padding: 10px 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.not-loged-section h2, .no-projects-section h2{
+    font-family: "Poppins", sans-serif;
+    font-size: xx-large;
+}
+.not-loged-section button{
+    padding: 10px 20px;
+    border: 0;
+    outline: 0;
+    background-color: #A67C52;
+    border-radius: 5px;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: x-large;
+    transition: 0.3s ease-in-out all;
+}
+.no-projects-buttons{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 30px;
+}
+.no-projects-section button{
+    padding: 10px 20px;
+    border: 0;
+    outline: 0;
+    background-color: #A67C52;
+    border-radius: 5px;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: medium;
+    transition: 0.3s ease-in-out all;
+}
+
+.not-loged-section button:hover, .no-projects-buttons button:hover{
+    cursor: pointer;
+    background-color: #775636;
+    transform: translateY(-10px);
 }
