--- a/static/styles/nav.css
+++ b/static/styles/nav.css
@@ -19,6 +19,11 @@ nav h1{
     font-family: "Poppins", sans-serif;
     font-weight: 500;
 }
+.nav-right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .nav-right *{
     margin: 0px 5px;
 }
@@ -29,4 +34,17 @@ nav h1{
 }
 .nav-right img:hover{
     cursor: pointer;
+}
+.nav-login{
+    border: 0;
+    outline: 0;
+    background-color: #A67C52;
+    border-radius: 5px;
+    color: white;
+    padding: 5px 10px;
+    transition: 0.3s ease-in-out all;
+}
+.nav-login:hover{
+    background-color: #775636;
+    transform: translateY(-3px);
 }
